# SDL3Test

./: CMakeLists.txt  Makefile  README.md  SDL3Test.sln
SDL3Test/: Main.cpp  MiscCommands.cpp  SDL3Test.vcxproj  SDL3Test.vcxproj.filters  U3Button.cpp  U3Button.h  U3Dialog.cpp  U3Dialog.h  U3Misc.cpp  U3Misc.h  U3Resources.cpp  U3Resources.h  U3ScrollArea.cpp  U3ScrollArea.h  U3Theme.h  U3Utilities.cpp  U3Utilities.h  UltimaAuotcombat.cpp  UltimaDungeon.cpp  UltimaDungeon.h  UltimaGraphics.cpp  UltimaGraphics.h  UltimaIncludes.cpp  UltimaIncludes.h  UltimaMacIF.cpp  UltimaMacIF.h  UltimaMain.h  UltimaNewMap.cpp  UltimaSound.cpp  UltimaSound.h  UltimaSpellCombat.cpp  UltimaSpellCombat.h
SDL3Test/Resources/PLists/: Messages.plist
SDL3Test/Resources/Save/: Armour Use By class.ult  Experience Table.ult  Location_Table.ult  Moongate Locations.ult  PARTY.ULT  ROSTER.ULT  Roster1.ult  Sosaria Current.ult  Type Initial Table.ult  Weapon Use By class.ult  settings.xml
SDL3Test/Resources/Text/: MainResources.rsrc_DITL_403.txt  MainResources.rsrc_DITL_404.txt  MainResources.rsrc_DITL_415.txt  MainResources.rsrc_DITL_416.txt  MainResources.rsrc_STR#_415_Class Preset Values_0.txt  MainResources.rsrc_STR#_415_Class Preset Values_1.txt  MainResources.rsrc_STR#_415_Class Preset Values_10.txt  MainResources.rsrc_STR#_415_Class Preset Values_2.txt  MainResources.rsrc_STR#_415_Class Preset Values_3.txt  MainResources.rsrc_STR#_415_Class Preset Values_4.txt  MainResources.rsrc_STR#_415_Class Preset Values_5.txt  MainResources.rsrc_STR#_415_Class Preset Values_6.txt  MainResources.rsrc_STR#_415_Class Preset Values_7.txt  MainResources.rsrc_STR#_415_Class Preset Values_8.txt  MainResources.rsrc_STR#_415_Class Preset Values_9.txt  MainResources.rsrc_STR#_418_Alert Messages_0.txt  MainResources.rsrc_STR#_418_Alert Messages_1.txt  MainResources.rsrc_STR#_418_Alert Messages_10.txt  MainResources.rsrc_STR#_418_Alert Messages_11.txt  MainResources.rsrc_STR#_418_Alert Messages_12.txt  MainResources.rsrc_STR#_418_Alert Messages_13.txt  MainResources.rsrc_STR#_418_Alert Messages_14.txt  MainResources.rsrc_STR#_418_Alert Messages_15.txt  MainResources.rsrc_STR#_418_Alert Messages_16.txt  MainResources.rsrc_STR#_418_Alert Messages_17.txt  MainResources.rsrc_STR#_418_Alert Messages_2.txt  MainResources.rsrc_STR#_418_Alert Messages_3.txt  MainResources.rsrc_STR#_418_Alert Messages_4.txt  MainResources.rsrc_STR#_418_Alert Messages_5.txt  MainResources.rsrc_STR#_418_Alert Messages_6.txt  MainResources.rsrc_STR#_418_Alert Messages_7.txt  MainResources.rsrc_STR#_418_Alert Messages_8.txt  MainResources.rsrc_STR#_418_Alert Messages_9.txt
